adding the profile buttons

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,23 @@
   <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
+
+<script>
+  var loadFile = function (event) {
+
+    var input = event.target;
+    var file = input.files[0];
+    var type = file.type;
+
+    var output = document.getElementById('preview_img');
+
+
+    output.src = URL.createObjectURL(event.target.files[0]);
+    output.onload = function () {
+      URL.revokeObjectURL(output.src) // free memory
+    }
+  };
+</script>
 </body>
 </html>
