--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+  <style>
+    /* Dropdown Animation */
+    .dropdown-enter {
+      opacity: 0;
+      transform: translateY(-10px);
+    }
+
+    .dropdown-enter-active {
+      opacity: 1;
+      transform: translateY(0);
+      transition: opacity 200ms, transform 200ms;
+    }
+
+    .dropdown-exit {
+      opacity: 1;
+    }
+
+    .dropdown-exit-active {
+      opacity: 0;
+      transform: translateY(-10px);
+      transition: opacity 200ms, transform 200ms;
+    }
+  </style>
 </head>
 <body>
 <app-root></app-root>
